# warefleet

./: .gitignore  Makefile  README.md  docker-compose.yml
benchmarks/: run_benchmarks.py
benchmarks/scenarios/: peak_hour.yaml
docs/: NORTH-STAR.md  architecture.md  design-decisions.md  focus-and-framing.md  related-work.md  research-proposal.md  results.md  roadmap.md
fleet_manager/: Dockerfile  README.md  go.mod
fleet_manager/cmd/fleet-manager/: main.go
fleet_manager/cmd/gridsim/: main.go
fleet_manager/internal/allocation/: allocation.go  allocation_test.go  auction.go  greedy.go  hungarian.go
fleet_manager/internal/coordination/: coordinator.go  planner.go
fleet_manager/internal/gridworld/: astar.go  astar_test.go  grid.go  pibt.go  pibt_test.go
fleet_manager/internal/metrics/: metrics.go
fleet_manager/internal/model/: types.go
fleet_manager/internal/mqtt/: client.go
monitoring/: mosquitto.conf
monitoring/prometheus/: prometheus.yml
ros2_ws/: README.md
ros2_ws/src/warefleet_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/warefleet_bringup/config/: fleet.yaml  tb3_bridge_noclock.yaml
ros2_ws/src/warefleet_bringup/launch/: single_robot.launch.py  warehouse.launch.py
ros2_ws/src/warefleet_bringup/maps/: warehouse.pgm  warehouse.yaml
ros2_ws/src/warefleet_bringup/worlds/: warehouse.sdf
ros2_ws/src/warefleet_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/warefleet_msgs/msg/: PathPlan.msg  RobotState.msg  Task.msg  TaskAssignment.msg
scripts/: demo.sh  stop.sh
sim/worlds/: README.md
web/: README.md
(+17 files in other folders)
